# os-shim

./: .gitignore  Cargo.toml  LICENSE  justfile  manifest
.beads/: metadata.json
src/: lib.rs  mock.rs  parity_tests.rs  real.rs
src/mock/: tests.rs
src/real/: tests.rs
