[package]
name = "os-shim"
version = "0.1.0"
edition = "2024"
authors = ["Eduardo Burgos <eduardo@tixena.com>"]
description = "Mockable abstraction layer over OS and git operations for testable Rust code"
license = "MIT"
repository = "https://github.com/tixena/os-shim"
keywords = ["testing", "mock", "filesystem", "abstraction"]
categories = ["development-tools::testing", "filesystem"]
readme = "README.md"

[dependencies]
# Real filesystem implementation
tempfile = "3"
ignore = "0.4"

# Mock implementation logging
tracing = "0.1"

# Process operations (optional)
libc = { version = "0.2", optional = true }

[features]
default = []
process = ["libc"]

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
restriction = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
blanket_clippy_restriction_lints = "allow"
implicit_return = "allow"
pub_with_shorthand = "allow"
module_name_repetitions = "allow"
question_mark_used = "allow"
self_named_module_files = "allow"
separated_literal_suffix = "allow"
single_call_fn = "allow"
print_stderr = "allow"
